# ARIA-AI

./: .gitignore  api.py
ARIA/: .gitignore  Dockerfile  README.md  docker-compose.yml  nohup.out  pyproject.toml  start.sh  stop.sh
ARIA/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
ARIA/frontend/public/: manifest.json
ARIA/frontend/src/: App.css  App.jsx  index.css
ARIA/frontend/src-tauri/: Info.plist  build.rs  tauri.conf.json
ARIA/frontend/src-tauri/icons/: icon.icns
ARIA/frontend/src-tauri/src/: lib.rs
ARIA/presets/: config.example.json
ARIA/src/ARIA/: __init__.py  api.py  cli.py  main.py
ARIA/src/ARIA/agents/: __init__.py  analyst.py  brief.py  chain.py  coder.py  memory.py  monitor.py  planner.py  research_agent.py  researcher.py  terminal_agent.py  writer.py
ARIA/src/ARIA/automation/: __init__.py  workflow_engine.py
ARIA/src/ARIA/core/: config.py  engine.py  logging_setup.py  presets.py  reflector.py  registry.py  smart_router.py
ARIA/src/ARIA/engine/: base.py  ollama_engine.py  selector.py
ARIA/src/ARIA/learning/: scheduler.py  tracker.py
ARIA/src/ARIA/memory/: conversation_store.py  semantic_context.py  store.py  vector_memory.py
ARIA/src/ARIA/orchestrator/: router.py
ARIA/src/ARIA/scheduler/: proactive.py
ARIA/src/ARIA/skills/: __init__.py  basic.py  benchmark.py  registry.py
ARIA/src/ARIA/telemetry/: metrics.py
ARIA/src/ARIA/tools/: alarm.py  app_control.py  audio_recorder.py  browser_automation.py  browser_control.py  calendar_tools.py  clipboard.py  clipboard_history.py  code_interpreter.py  code_review.py  code_runner.py  contacts.py  context_awareness.py  document_qa.py  email_intelligence.py  file_index.py  file_tools.py  focus_mode.py  git_intelligence.py  github_monitor.py  global_hotkey.py  health.py  imessage.py  keychain.py  log_analyzer.py  mail_control.py  math_tools.py  meeting_assistant.py  menubar.py  notes.py  obsidian.py  plugin_system.py  podcast_summarizer.py  pomodoro.py  reminders.py  retrieval.py  retrieval_store.py  rss_reader.py  screen_capture.py  screen_capture_impl.py  (+18 more)
ARIA/src/aria.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ARIA/tests/: conftest.py  test_api.py  test_tools.py
