[project]
name = "aria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.8.0",
    "fastapi>=0.128.0,<0.129",
    "feedparser>=6.0.12",
    "playwright>=1.60.0",
    "psutil>=5.9.0",
    "pydantic>=2.8.2",
    "python-multipart>=0.0.20",
    "requests>=2.31.0,<2.33",
    "schedule>=1.2.2",
    "uvicorn>=0.30.0,<0.40",
    "yt-dlp>=2025.10.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
aria-api = "ARIA.api:main"
aria-app = "ARIA.main:main"
aria = "ARIA.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
