[project]
name = "aria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.8.0",
    "fastapi>=0.128.0,<0.129",
    "faster-whisper>=1.2.1",
    "feedparser>=6.0.12",
    "numpy>=2.0.2",
    "playwright>=1.60.0",
    "psutil>=5.9.0",
    "pydantic>=2.8.2",
    "python-multipart>=0.0.20",
    "requests>=2.31.0,<2.33",
    "schedule>=1.2.2",
    "sounddevice>=0.5.5",
    "uvicorn>=0.30.0,<0.40",
    "yt-dlp>=2025.10.14",
    "rumps>=0.4.0",
    "pynput>=1.7.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.27.0",
]
vision = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
]

[project.scripts]
aria-api = "ARIA.api:main"
aria-app = "ARIA.main:main"
aria = "ARIA.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ARIA"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
